refactor(base): 重构代码并优化项目结构
- 调整代码格式和顺序，提高可读性
- 优化部分类和方法的命名
- 移除冗余代码和注释- 异步处理操作日志
- 修复 JWT 令牌验证逻辑
- 优化 Spring Security配置